# esphome-config

./: 26-c3u-bt-proxy.yaml  27-m5pico-acurite-bridge.yaml  Makefile  acurite-986-tester.yaml  atom-tempsensor-1.yaml  c3-acurite-986-bridge.yaml  c3-temp-sensor.yaml  c3-tempsensor-1.yaml  c3-tempsensor-2.yaml  docker-compose.yml  m5stick-c1.yaml  nanlink-control.yaml  nec_table.c  neokey.h  office-atom-ir.yaml  office-atom-neokey.yaml  office-control-deck.yaml  office-light-switch.yaml  office-usb-switcher-desk-atom.yaml  office.yaml  pc-fan-control-1.yaml  pyproject.toml  rf24-nanlink.h  sonoff-s31-1.yaml  sonoff-s31-2.yaml  sonoff-s31-3.yaml  sonoff-s31-4.yaml  sonoff-s31-5.yaml  sonoff-s31-6.yaml  util.h
custom/: acurite-00986.h
templates/: Makefile  sonoff-s31-template.yaml  sonoff-s31-values.yaml  sonoff-s31.yq
