[tool.poetry]
name = "esphome-config-kelvie"
version = "0.1.0"
description = ""
authors = ["Kelvie Wong <kelvie@kelvie.ca>"]
package-mode=false

[tool.poetry.dependencies]
python = "^3.12"
esphome = "^2024.5.4"
setuptools = "^73.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
